[workspace]
members = ["impl"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/SrGaabriel/oxymorph"
authors = ["Gabriel Minatel"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
oxymorph-impl = { version = "0.0.1", path = "impl" }
sea-orm = "2.0.0-rc.38"

[package]
name = "oxymorph"
description = "Attribute macro generating view, create and patch payload types from a single canonical struct."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
oxymorph-impl.workspace = true

[dev-dependencies]
sea-orm = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
sea-orm = ["dep:sea-orm"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"